--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@graphprotocol/graph-cli": "^0.23.1",
     "@openzeppelin/contracts": "^4.3.2"
   }
 }
